css/modal.css
.modal-container{
    height: 100vh;
    width: 100%;
    background: rgba(0, 0, 0, 0.1);
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    display: none;
    justify-content: center;
    align-items: center;
}
.modal-container.ativo{
    display: flex;
}
.modal{
    background-color: #d1d1d1;
    padding: 40px;
    border: 10px solid #02A0E3 ;
    border-radius: 10px;
    position: relative;
    width: 50%;
    min-width: 350px;
    height: 90%;
    overflow: hidden;
}

@keyframes modal{
    from{
        opacity: 0;
        transform: translat3d(0, -30px, 0);
    }
    to{
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}

.ativo .modal{
    animation: modal 0.5s forwards;
}

.fechar{
    position: absolute;
    top: -30px;
    right: -30px;
    width: 50px;
    height: 50px;
    border: 4px solid #02A0E3;
    border-radius: 50%;
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
    font-size: 1.8rem;
    font-weight: 700;
    cursor: pointer;
    transition: background-color 0.3s, color 0.3s;
}
.fechar:hover{
    background-color: #02A0E3;
    color: white;
}
.modal h3{
    margin-bottom: 10px;
    font-weight: 300;
}
.modal h3 span{
    font-weight: 700;
    display: block;
}
.form{
    display: flex;
    flex-direction: column;
}
.form input, .form textarea{
    margin-bottom: 15px;
    border: none;
    border-radius: 5px;
    padding: 5px 10px;
}
.form textarea{
    resize: none;
    height: 120px;
}
.form input:focus, .form textarea:focus{
    outline: none;
    border: 1px solid #02A0E3;
}
.form .btn-enviar{
    background-color: transparent;
    width: 100%;
    color: #262626;
    font-size: 1rem;
    padding: 10px 20px;
    margin-bottom: 10px;
    border: 1px solid #262626;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s;
}
.form .btn-enviar:hover{
    background-color: #262626;
    color: white;
}

